--- a/styles.css
+++ b/styles.css
@@ -145,11 +145,6 @@ html,body
     margin-bottom: 0.5rem; 
     transition: 0.3s ease;
 }
-.hero__content h1:hover{
-    font-size: clamp(3.3rem, 8vw, 7.3rem);
-    text-transform: uppercase;
-    margin-bottom: 0.5rem; 
-}
 .hero__content p{
     font-size: clamp(1rem, 4vw, 2.5rem);
     margin-bottom: 3rem; 
@@ -265,6 +260,8 @@ html,body
     padding:1.5rem;
     transition: 0.3s ease;
 }
+
+@media screen and (min-width: 900px){
 .service:hover{
     width: 60vw;
     .highlight{
@@ -284,7 +281,9 @@ html,body
         padding: 1rem;
     }
 }
-@media screen and (max-width: 768px){
+}
+
+@media screen and (max-width: 899px){
     .service{
         width:100vw;
     }
